@@ -525,3 +525,4 @@ Class Predb
 		return $count["cnt"];
 	}
 }
+
